crates/macro-tools/tests/ui/deref/fail/multi_target.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
struct Wrapper {
    #[deref]
    first: String,
    #[deref(mut)]
    second: String,
}

fn main() {}
