crates/macro-tools/tests/ui/deref/fail/multi_target.stderr
error: only one named field can be marked with `#[deref]`
 --> tests/ui/deref/fail/multi_target.rs:8:5
  |
8 |     second: String,
  |     ^^^^^^
